--- a/index.html
+++ b/index.html
@@ -190,14 +190,14 @@
             <!-- Destaque 2 (The Alters - Notícia 2) -->
             <section class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
                 <div class="md:w-1/2">
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Imagem do jogo The Alters" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
+                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
                 </div>
                 <div class="md:w-1/2 p-6 flex flex-col justify-center">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
                         <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
                     </h2>
                     <p class="text-gray-400 text-lg mb-6">
-                        Prepare-se para uma experiência única com o novo trailer de sobrevivência da 11 bit studios.
+                        Prepare-se para uma experiência única com o novo thriller de sobrevivência da 11 bit studios.
                     </p>
                     <a href="noticias2.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
                         Leia a Notícia Completa &rarr;
@@ -219,7 +219,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card de Notícia 1 - Promoção KRAFTON -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="Promoção Krafton na Steam" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="[Image of KRAFTON Sale]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Promoção KRAFTON na Steam: Grandes Descontos em PUBG, Subnautica e Mais!</a>
@@ -233,7 +233,7 @@
 
                 <!-- Card de Notícia 2 - The Alters: com imagem e link para a PÁGINA DEDICADA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Imagem do jogo The Alters" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
@@ -247,7 +247,7 @@
 
                 <!-- Card de Notícia 3 - AGORA LINKA PARA ANALISE1.HTML E COM A IMAGEM CORRETA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="Capa de REMATCH" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="[Image of REMATCH]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de Jogo: REMATCH – Minhas Primeiras Impressões!</a>
@@ -259,23 +259,24 @@
                     </div>
                 </article>
 
-                <!-- Card de Notícia 4 - Atualização de console -->
+                <!-- Card de Notícia 4 - PRÓXIMOS LANÇAMENTOS (Alterado para "lançamentos.html") -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/3B82F6/fff?text=Console+Update" alt="Atualização de Console" class="w-full h-48 object-cover">
+                    <!-- Imagem para Próximos Lançamentos -->
+                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="[Image of Próximos Lançamentos de Jogos]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Nova Atualização de Firmware para Consoles Promete Melhorias</a>
+                            <a href="lancamentos.html" class="hover:text-blue-400 transition duration-300">Confira os Próximos Lançamentos Mais Aguardados!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Fique por dentro das novidades que chegam ao seu console, incluindo otimizações de performance e novas funcionalidades.
+                            Fique por dentro dos títulos que estão chegando e prepare-se para as novidades do mundo dos games.
                         </p>
-                        <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="lancamentos.html" class="text-blue-400 hover:underline font-medium">Ver Lançamentos &rarr;</a>
                     </div>
                 </article>
 
                 <!-- Card de Notícia 5 - Vazamento de informações -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="Vazamento de Jogo" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="[Image of Vazamento de Jogo]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Vazamento Exclusivo Revela Detalhes de Novo Título de Ação e Aventura</a>
@@ -289,15 +290,15 @@
 
                 <!-- Card de Notícia 6 - Recorde de E-Sports -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="Recorde em E-Sports" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="[Image of Recorde em E-Sports]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/campeonato-mundial-recorde" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
+                            <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
                             O cenário competitivo continua crescendo, com milhões de espectadores acompanhando as finais de [Nome do Jogo].
                         </p>
-                        <a href="https://f5games.com.br/noticia/campeonato-mundial-recorde" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
                     </div>
                 </article>
             </div>
