--- a/noticias.html
+++ b/noticias.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <!-- Logo/Nome do Site -->
             <a href="index.html" class="mb-4 md:mb-0">
-                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="Logo F5 Games" class="h-12 w-auto rounded-md">
+                <img src="https://i.ibb.co/Q7QTMNrt/key-f5-symbol-black-computer-260nw-1968799435.webp" alt="[Image of Logo F5 Games]" class="h-12 w-auto rounded-md">
             </a>
             <!-- Menu de Navegação -->
             <nav>
@@ -49,7 +49,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card de Notícia 1 - Promoção KRAFTON -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="Promoção Krafton na Steam" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="[Image of KRAFTON Sale]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Promoção KRAFTON na Steam: Grandes Descontos em PUBG, Subnautica e Mais!</a>
@@ -63,52 +63,51 @@
 
                 <!-- Card de Notícia 2 - The Alters: com imagem e link para a PÁGINA DEDICADA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <!-- Imagem de The Alters -->
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Imagem do jogo The Alters" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <!-- Título corrigido para "Trailer" -->
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
                             Mergulhe em uma jornada existencial onde Jan Dolski deve criar "alteres" de si mesmo para sobreviver em um planeta hostil. Suas escolhas moldam realidades!
                         </p>
-                        <!-- Link AGORA DIRECIONA PARA noticias2.html -->
                         <a href="noticias2.html" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
                     </div>
                 </article>
 
-                <!-- Card de Notícia 3 - Fechamento de estúdio -->
+                <!-- Card de Notícia 3 - AGORA LINKA PARA ANALISE1.HTML E COM A IMAGEM CORRETA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/EF4444/fff?text=Estúdio+Fechado" alt="Estúdio de Jogos Fechado" class="w-full h-48 object-cover">
+                    <!-- Imagem real do REMATCH -->
+                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="[Image of REMATCH]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/estudio-renomado-fecha" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Estúdio Renomado Anuncia Fechamento Após Desempenho Fraco de Título</a>
+                            <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de Jogo: REMATCH – Minhas Primeiras Impressões!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Uma triste notícia para a indústria: o estúdio por trás de [Nome do Jogo Famoso] encerra suas atividades. Saiba os detalhes.
+                            Aprofunde-se na nossa análise detalhada de REMATCH, o novo jogo de esporte tático que promete revolucionar!
                         </p>
-                        <a href="https://f5games.com.br/noticia/estudio-renomado-fecha" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="analise1.html" class="text-blue-400 hover:underline font-medium">Leia a Análise &rarr;</a>
                     </div>
                 </article>
 
-                <!-- Card de Notícia 4 - Atualização de console -->
+                <!-- Card de Notícia 4 - PRÓXIMOS LANÇAMENTOS (Alterado) -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/3B82F6/fff?text=Console+Update" alt="Atualização de Console" class="w-full h-48 object-cover">
+                    <!-- Imagem para Próximos Lançamentos -->
+                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="[Image of Próximos Lançamentos]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/nova-atualizacao-consoles" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Nova Atualização de Firmware para Consoles Promete Melhorias</a>
+                            <a href="lancamentos.html" class="hover:text-blue-400 transition duration-300">Confira os Próximos Lançamentos Mais Aguardados!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Fique por dentro das novidades que chegam ao seu console, incluindo otimizações de performance e novas funcionalidades.
+                            Fique por dentro dos títulos que estão chegando e prepare-se para as novidades do mundo dos games.
                         </p>
-                        <a href="https://f5games.com.br/noticia/nova-atualizacao-consoles" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="lancamentos.html" class="text-blue-400 hover:underline font-medium">Ver Lançamentos &rarr;</a>
                     </div>
                 </article>
 
                 <!-- Card de Notícia 5 - Vazamento de informações -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="Vazamento de Jogo" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="[Image of Vazamento de Jogo]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Vazamento Exclusivo Revela Detalhes de Novo Título de Ação e Aventura</a>
@@ -122,15 +121,15 @@
 
                 <!-- Card de Notícia 6 - Recorde de E-Sports -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="Recorde em E-Sports" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="[Image of Recorde em E-Sports]" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/campeonato-mundial-recorde" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
+                            <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
                             O cenário competitivo continua crescendo, com milhões de espectadores acompanhando as finais de [Nome do Jogo].
                         </p>
-                        <a href="https://f5games.com.br/noticia/campeonato-mundial-recorde" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
                     </div>
                 </article>
             </div>
