--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             overflow: hidden;
             border-radius: 0.5rem; /* rounded-lg */
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* shadow-xl */
-            /* Adicionado altura fixa para ajudar no layout, se necessário, ou usar min-height */
             min-height: 400px; /* Altura mínima para o carrossel */
             display: flex; /* Permite que os slides internos sejam posicionados */
             align-items: center; /* Centraliza verticalmente o slide ativo */
@@ -69,6 +68,15 @@
         @media (min-width: 768px) {
             .carousel-slide.active {
                 flex-direction: row; /* Volta para layout em linha para desktop */
+            }
+            .carousel-content { /* Ajusta o padding para o modo de grid */
+                padding: 1.5rem;
+            }
+            .carousel-content h2 { /* Ajusta o tamanho da fonte para o modo de grid */
+                font-size: 2.25rem; /* text-3xl */
+            }
+            .carousel-content p { /* Ajusta o tamanho da fonte para o modo de grid */
+                font-size: 1.125rem; /* text-lg */
             }
         }
 
@@ -125,6 +133,16 @@
         .indicator-dot.active {
             background-color: white;
         }
+
+        /* Novas classes para o layout de grid principal */
+        @media (min-width: 768px) {
+            .main-content-grid {
+                display: grid;
+                grid-template-columns: 3fr 1fr; /* 3/4 para o carrossel, 1/4 para lançamentos */
+                gap: 1.5rem;
+                align-items: start;
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -154,64 +172,93 @@
 
     <!-- Seção Principal de Conteúdo -->
     <main class="container mx-auto px-4 py-8">
-        <!-- Carrossel de Destaques -->
-        <div class="highlight-carousel-container mb-12 bg-gray-800">
-            <!-- Destaque 1 (Análise de REMATCH) -->
-            <section class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
-                <div class="md:w-1/2">
-                    <div class="video-wrapper rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
-                        <video
-                            src="https://video.fastly.steamstatic.com/store_trailers/257123547/movie480_vp9.webm?t=1744303216"
-                            autoplay
-                            loop
-                            muted
-                            playsinline
-                            controls
-                            poster="https://placehold.co/800x450/4a5568/edf2f7?text=TRAILER+EM+DESTAQUE"
-                            title="Trailer em Destaque"
-                        >
-                            Seu navegador não suporta a tag de vídeo.
-                        </video>
+        <!-- Carrossel de Destaques e Lançamentos - Nova estrutura de grid -->
+        <section class="main-content-grid mb-12">
+            <!-- Carrossel de Destaques -->
+            <div class="highlight-carousel-container bg-gray-800">
+                <!-- Destaque 1 (Análise de REMATCH) -->
+                <article class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <div class="video-wrapper rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
+                            <video
+                                src="https://video.fastly.steamstatic.com/store_trailers/257123547/movie480_vp9.webm?t=1744303216"
+                                autoplay
+                                loop
+                                muted
+                                playsinline
+                                controls
+                                poster="https://placehold.co/800x450/4a5568/edf2f7?text=TRAILER+EM+DESTAQUE"
+                                title="Trailer em Destaque"
+                            >
+                                Seu navegador não suporta a tag de vídeo.
+                            </video>
+                        </div>
                     </div>
-                </div>
-                <div class="md:w-1/2 p-6 flex flex-col justify-center">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
-                        <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de jogo: REMATCH – Minhas Primeiras Impressões!</a>
-                    </h2>
-                    <p class="text-gray-400 text-lg mb-6">
-                        Mergulhe em nossa análise completa do novo jogo de esporte tático que está revolucionando a Steam!
-                    </p>
-                    <a href="analise1.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
-                        Leia a Análise Completa &rarr;
-                    </a>
-                </div>
-            </section>
+                    <div class="md:w-1/2 p-6 flex flex-col justify-center">
+                        <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
+                            <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de jogo: REMATCH – Minhas Primeiras Impressões!</a>
+                        </h2>
+                        <p class="text-gray-400 text-lg mb-6">
+                            Mergulhe em nossa análise completa do novo jogo de esporte tático que está revolucionando a Steam!
+                        </p>
+                        <a href="analise1.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
+                            Leia a Análise Completa &rarr;
+                        </a>
+                    </div>
+                </article>
 
-            <!-- Destaque 2 (The Alters - Notícia 2) -->
-            <section class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
-                <div class="md:w-1/2">
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
-                </div>
-                <div class="md:w-1/2 p-6 flex flex-col justify-center">
-                    <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
-                        <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
-                    </h2>
-                    <p class="text-gray-400 text-lg mb-6">
-                        Prepare-se para uma experiência única com o novo thriller de sobrevivência da 11 bit studios.
-                    </p>
-                    <a href="noticias2.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
-                        Leia a Notícia Completa &rarr;
-                    </a>
-                </div>
-            </section>
+                <!-- Destaque 2 (The Alters - Notícia 2) -->
+                <article class="carousel-slide bg-gray-800 rounded-lg overflow-hidden">
+                    <div class="md:w-1/2">
+                        <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Capa do jogo The Alters" class="w-full h-full object-cover rounded-tl-lg md:rounded-bl-lg md:rounded-tr-none">
+                    </div>
+                    <div class="md:w-1/2 p-6 flex flex-col justify-center">
+                        <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
+                            <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
+                        </h2>
+                        <p class="text-gray-400 text-lg mb-6">
+                            Prepare-se para uma experiência única com o novo thriller de sobrevivência da 11 bit studios.
+                        </p>
+                        <a href="noticias2.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
+                            Leia a Notícia Completa &rarr;
+                        </a>
+                    </div>
+                </article>
 
-            <!-- Botões de Navegação do Carrossel -->
-            <button class="carousel-button prev" aria-label="Anterior">&#10094;</button>
-            <button class="carousel-button next" aria-label="Próximo">&#10095;</button>
+                <!-- Botões de Navegação do Carrossel -->
+                <button class="carousel-button prev" aria-label="Anterior">&#10094;</button>
+                <button class="carousel-button next" aria-label="Próximo">&#10095;</button>
 
-            <!-- Indicadores de Carrossel (Pontos) -->
-            <div class="carousel-indicators"></div>
-        </div>
+                <!-- Indicadores de Carrossel (Pontos) -->
+                <div class="carousel-indicators"></div>
+            </div>
+
+            <!-- Destaque Secundário (Próximos Lançamentos) -->
+            <div class="bg-gray-800 rounded-lg shadow-xl p-6">
+                <h3 class="text-2xl font-bold text-white mb-4 text-center border-b-2 border-blue-600 pb-2">Próximos Lançamentos</h3>
+                <ul class="text-gray-300 space-y-3">
+                    <li class="border-b border-gray-700 pb-2">
+                        <span class="font-semibold text-blue-300">13 Jun:</span> The Alters
+                    </li>
+                    <li class="border-b border-gray-700 pb-2">
+                        <span class="font-semibold text-blue-300">16 Jun:</span> Trilogia Gex
+                    </li>
+                    <li class="border-b border-gray-700 pb-2">
+                        <span class="font-semibold text-blue-300">17 Jun:</span> FBC: Firebreak
+                    </li>
+                    <li class="border-b border-gray-700 pb-2">
+                        <span class="font-semibold text-blue-300">19 Jun:</span> Rematch
+                    </li>
+                    <li class="border-b border-gray-700 pb-2">
+                        <span class="font-semibold text-blue-300">26 Jun:</span> Death Stranding 2
+                    </li>
+                    <!-- Adicione mais lançamentos conforme necessário -->
+                </ul>
+                <div class="text-center mt-6">
+                    <a href="lancamentos.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-md transition duration-300">Ver Todos os Lançamentos</a>
+                </div>
+            </div>
+        </section>
 
         <!-- Seção de Notícias Recentes -->
         <section>
@@ -219,7 +266,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Card de Notícia 1 - Promoção KRAFTON -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="[Image of KRAFTON Sale]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/d97706/fff?text=KRAFTON+Sale" alt="Promoção KRAFTON" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Promoção KRAFTON na Steam: Grandes Descontos em PUBG, Subnautica e Mais!</a>
@@ -233,7 +280,7 @@
 
                 <!-- Card de Notícia 2 - The Alters: com imagem e link para a PÁGINA DEDICADA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="[Image of The Alters]" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Capa do jogo The Alters" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
@@ -247,7 +294,7 @@
 
                 <!-- Card de Notícia 3 - AGORA LINKA PARA ANALISE1.HTML E COM A IMAGEM CORRETA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="[Image of REMATCH]" class="w-full h-48 object-cover">
+                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="Gameplay de REMATCH" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de Jogo: REMATCH – Minhas Primeiras Impressões!</a>
@@ -259,10 +306,10 @@
                     </div>
                 </article>
 
-                <!-- Card de Notícia 4 - PRÓXIMOS LANÇAMENTOS (Alterado para "lançamentos.html") -->
+                <!-- Card de Notícia 4 - PRÓXIMOS LANÇAMENTOS (Alterado para "lancamentos.html") -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
                     <!-- Imagem para Próximos Lançamentos -->
-                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="[Image of Próximos Lançamentos de Jogos]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/5A8DED/fff?text=PRÓXIMOS+LANÇAMENTOS" alt="Próximos Lançamentos de Jogos" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="lancamentos.html" class="hover:text-blue-400 transition duration-300">Confira os Próximos Lançamentos Mais Aguardados!</a>
@@ -276,7 +323,7 @@
 
                 <!-- Card de Notícia 5 - Vazamento de informações -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="[Image of Vazamento de Jogo]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/D946EF/fff?text=Vazamento+Exclusivo" alt="Vazamento de Jogo" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://f5games.com.br/noticia/vazamento-exclusivo-jogo" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Vazamento Exclusivo Revela Detalhes de Novo Título de Ação e Aventura</a>
@@ -290,7 +337,7 @@
 
                 <!-- Card de Notícia 6 - Recorde de E-Sports -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="[Image of Recorde em E-Sports]" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/600x338/059669/fff?text=Recorde+E-Sports" alt="Recorde em E-Sports" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
                             <a href="https://store.steampowered.com/sale/kraftonpublishersale2025?snr=1_4_4__118" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Campeonato Mundial de E-Sports Bate Recorde de Audiência Global</a>
